parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    IFS

Grammar

Rule 0     S' -> start
Rule 1     start -> LINE
Rule 2     LINE -> IDX ; LINE
Rule 3     LINE -> IFX LINE
Rule 4     LINE -> WHILEX LINE
Rule 5     LINE -> FORX LINE
Rule 6     LINE -> RETURNX ; LINE
Rule 7     LINE -> PRINTX ; LINE
Rule 8     LINE -> BLOCK LINE
Rule 9     LINE -> EMPTY
Rule 10    ONELINE -> IDX ;
Rule 11    ONELINE -> IFX
Rule 12    ONELINE -> WHILEX
Rule 13    ONELINE -> FORX
Rule 14    ONELINE -> RETURNX ;
Rule 15    ONELINE -> PRINTX ;
Rule 16    BLOCK -> { LINE }
Rule 17    EMPTY -> <empty>
Rule 18    IDX -> ID = EXPRESSION
Rule 19    IDX -> ID = MATRIX
Rule 20    IDX -> ID = TABLE
Rule 21    IDX -> ID [ EXPRESSION ] = EXPRESSION
Rule 22    IDX -> ID [ EXPRESSION , EXPRESSION ] = EXPRESSION
Rule 23    IDX -> ID ADDASSIGN EXPRESSION
Rule 24    IDX -> ID SUBASSIGN EXPRESSION
Rule 25    IDX -> ID MULASSIGN EXPRESSION
Rule 26    IDX -> ID DIVASSIGN EXPRESSION
Rule 27    ZEROSX -> ZEROS ( EXPRESSION )
Rule 28    ONESX -> ONES ( EXPRESSION )
Rule 29    EYEX -> EYE ( EXPRESSION )
Rule 30    MATRIX -> [ MATRIXINSIDE ]
Rule 31    MATRIX -> MATRIXEXPR
Rule 32    MATRIX -> ZEROSX
Rule 33    MATRIX -> ONESX
Rule 34    MATRIX -> EYEX
Rule 35    MATRIXINSIDE -> TABLE , MATRIXINSIDE
Rule 36    MATRIXINSIDE -> TABLE
Rule 37    TABLE -> [ VALUES ]
Rule 38    VALUES -> EXPRESSION , VALUES
Rule 39    VALUES -> EXPRESSION
Rule 40    MATRIXEXPR -> EXPRESSION DOTADD EXPRESSION
Rule 41    MATRIXEXPR -> EXPRESSION DOTSUB EXPRESSION
Rule 42    MATRIXEXPR -> EXPRESSION DOTMUL EXPRESSION
Rule 43    MATRIXEXPR -> EXPRESSION DOTDIV EXPRESSION
Rule 44    MATRIXEXPR -> EXPRESSION '
Rule 45    IFX -> IF ( CONDITION ) ONELINE
Rule 46    IFX -> IF ( CONDITION ) BLOCK
Rule 47    IFX -> IF ( CONDITION ) ONELINE ELSE ONELINE
Rule 48    IFX -> IF ( CONDITION ) ONELINE ELSE BLOCK
Rule 49    IFX -> IF ( CONDITION ) BLOCK ELSE ONELINE
Rule 50    IFX -> IF ( CONDITION ) BLOCK ELSE BLOCK
Rule 51    LOOPLINE -> IDX ; LOOPLINE
Rule 52    LOOPLINE -> WHILEX LOOPLINE
Rule 53    LOOPLINE -> FORX LOOPLINE
Rule 54    LOOPLINE -> RETURNX ; LOOPLINE
Rule 55    LOOPLINE -> PRINTX ; LOOPLINE
Rule 56    LOOPLINE -> LOOPBLOCK LOOPLINE
Rule 57    LOOPLINE -> EMPTY
Rule 58    LOOPLINE -> LOOPIFX LOOPLINE
Rule 59    LOOPLINE -> BREAK ; LOOPLINE
Rule 60    LOOPLINE -> CONTINUE ; LOOPLINE
Rule 61    ONELOOPLINE -> IDX ;
Rule 62    ONELOOPLINE -> WHILEX
Rule 63    ONELOOPLINE -> FORX
Rule 64    ONELOOPLINE -> RETURNX ;
Rule 65    ONELOOPLINE -> PRINTX ;
Rule 66    ONELOOPLINE -> LOOPIFX
Rule 67    ONELOOPLINE -> BREAK ;
Rule 68    ONELOOPLINE -> CONTINUE ;
Rule 69    LOOPBLOCK -> { LOOPLINE }
Rule 70    LOOPIFX -> IF ( CONDITION ) ONELOOPLINE
Rule 71    LOOPIFX -> IF ( CONDITION ) LOOPBLOCK
Rule 72    LOOPIFX -> IF ( CONDITION ) ONELOOPLINE ELSE ONELOOPLINE
Rule 73    LOOPIFX -> IF ( CONDITION ) ONELOOPLINE ELSE LOOPBLOCK
Rule 74    LOOPIFX -> IF ( CONDITION ) LOOPBLOCK ELSE ONELOOPLINE
Rule 75    LOOPIFX -> IF ( CONDITION ) LOOPBLOCK ELSE LOOPBLOCK
Rule 76    WHILEX -> WHILE ( CONDITION ) ONELOOPLINE
Rule 77    WHILEX -> WHILE ( CONDITION ) LOOPBLOCK
Rule 78    FORX -> FOR ID = EXPRESSION : EXPRESSION ONELOOPLINE
Rule 79    FORX -> FOR ID = EXPRESSION : EXPRESSION LOOPBLOCK
Rule 80    CONDITION -> EXPRESSION EQUAL EXPRESSION
Rule 81    CONDITION -> EXPRESSION UNEQUAL EXPRESSION
Rule 82    CONDITION -> EXPRESSION LESSEQUAL EXPRESSION
Rule 83    CONDITION -> EXPRESSION GREATEREQUAL EXPRESSION
Rule 84    CONDITION -> EXPRESSION > EXPRESSION
Rule 85    CONDITION -> EXPRESSION < EXPRESSION
Rule 86    PRINTX -> PRINT PRINTMANY
Rule 87    PRINTMANY -> STRING
Rule 88    PRINTMANY -> EXPRESSION
Rule 89    PRINTMANY -> STRING , PRINTMANY
Rule 90    PRINTMANY -> EXPRESSION , PRINTMANY
Rule 91    RETURNX -> RETURN EXPRESSION
Rule 92    EXPRESSION -> NUMBER
Rule 93    EXPRESSION -> FLOATNUMBER
Rule 94    EXPRESSION -> ID
Rule 95    EXPRESSION -> EXPRESSION + EXPRESSION
Rule 96    EXPRESSION -> EXPRESSION - EXPRESSION
Rule 97    EXPRESSION -> EXPRESSION * EXPRESSION
Rule 98    EXPRESSION -> EXPRESSION / EXPRESSION
Rule 99    EXPRESSION -> ( EXPRESSION )
Rule 100   EXPRESSION -> - EXPRESSION

Terminals, with rules where they appear

'                    : 44
(                    : 27 28 29 45 46 47 48 49 50 70 71 72 73 74 75 76 77 99
)                    : 27 28 29 45 46 47 48 49 50 70 71 72 73 74 75 76 77 99
*                    : 97
+                    : 95
,                    : 22 35 38 89 90
-                    : 96 100
/                    : 98
:                    : 78 79
;                    : 2 6 7 10 14 15 51 54 55 59 60 61 64 65 67 68
<                    : 85
=                    : 18 19 20 21 22 78 79
>                    : 84
ADDASSIGN            : 23
BREAK                : 59 67
COMMENT              : 
CONTINUE             : 60 68
DIVASSIGN            : 26
DOTADD               : 40
DOTDIV               : 43
DOTMUL               : 42
DOTSUB               : 41
ELSE                 : 47 48 49 50 72 73 74 75
EQUAL                : 80
EYE                  : 29
FLOATNUMBER          : 93
FOR                  : 78 79
GREATEREQUAL         : 83
ID                   : 18 19 20 21 22 23 24 25 26 78 79 94
IF                   : 45 46 47 48 49 50 70 71 72 73 74 75
IFS                  : 
LESSEQUAL            : 82
MULASSIGN            : 25
NUMBER               : 92
ONES                 : 28
PRINT                : 86
RETURN               : 91
STRING               : 87 89
SUBASSIGN            : 24
UNEQUAL              : 81
WHILE                : 76 77
ZEROS                : 27
[                    : 21 22 30 37
]                    : 21 22 30 37
error                : 
{                    : 16 69
}                    : 16 69

Nonterminals, with rules where they appear

BLOCK                : 8 46 48 49 50 50
CONDITION            : 45 46 47 48 49 50 70 71 72 73 74 75 76 77
EMPTY                : 9 57
EXPRESSION           : 18 21 21 22 22 22 23 24 25 26 27 28 29 38 39 40 40 41 41 42 42 43 43 44 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 88 90 91 95 95 96 96 97 97 98 98 99 100
EYEX                 : 34
FORX                 : 5 13 53 63
IDX                  : 2 10 51 61
IFX                  : 3 11
LINE                 : 1 2 3 4 5 6 7 8 16
LOOPBLOCK            : 56 71 73 74 75 75 77 79
LOOPIFX              : 58 66
LOOPLINE             : 51 52 53 54 55 56 58 59 60 69
MATRIX               : 19
MATRIXEXPR           : 31
MATRIXINSIDE         : 30 35
ONELINE              : 45 47 47 48 49
ONELOOPLINE          : 70 72 72 73 74 76 78
ONESX                : 33
PRINTMANY            : 86 89 90
PRINTX               : 7 15 55 65
RETURNX              : 6 14 54 64
TABLE                : 20 35 36
VALUES               : 37 38
WHILEX               : 4 12 52 62
ZEROSX               : 32
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . LINE
    (2) LINE -> . IDX ; LINE
    (3) LINE -> . IFX LINE
    (4) LINE -> . WHILEX LINE
    (5) LINE -> . FORX LINE
    (6) LINE -> . RETURNX ; LINE
    (7) LINE -> . PRINTX ; LINE
    (8) LINE -> . BLOCK LINE
    (9) LINE -> . EMPTY
    (18) IDX -> . ID = EXPRESSION
    (19) IDX -> . ID = MATRIX
    (20) IDX -> . ID = TABLE
    (21) IDX -> . ID [ EXPRESSION ] = EXPRESSION
    (22) IDX -> . ID [ EXPRESSION , EXPRESSION ] = EXPRESSION
    (23) IDX -> . ID ADDASSIGN EXPRESSION
    (24) IDX -> . ID SUBASSIGN EXPRESSION
    (25) IDX -> . ID MULASSIGN EXPRESSION
    (26) IDX -> . ID DIVASSIGN EXPRESSION
    (45) IFX -> . IF ( CONDITION ) ONELINE
    (46) IFX -> . IF ( CONDITION ) BLOCK
    (47) IFX -> . IF ( CONDITION ) ONELINE ELSE ONELINE
    (48) IFX -> . IF ( CONDITION ) ONELINE ELSE BLOCK
    (49) IFX -> . IF ( CONDITION ) BLOCK ELSE ONELINE
    (50) IFX -> . IF ( CONDITION ) BLOCK ELSE BLOCK
    (76) WHILEX -> . WHILE ( CONDITION ) ONELOOPLINE
    (77) WHILEX -> . WHILE ( CONDITION ) LOOPBLOCK
    (78) FORX -> . FOR ID = EXPRESSION : EXPRESSION ONELOOPLINE
    (79) FORX -> . FOR ID = EXPRESSION : EXPRESSION LOOPBLOCK
    (91) RETURNX -> . RETURN EXPRESSION
    (86) PRINTX -> . PRINT PRINTMANY
    (16) BLOCK -> . { LINE }
    (17) EMPTY -> .

    ID              shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    RETURN          shift and go to state 15
    PRINT           shift and go to state 16
    {               shift and go to state 17
    $end            reduce using rule 17 (EMPTY -> .)

    start                          shift and go to state 1
    LINE                           shift and go to state 2
    IDX                            shift and go to state 3
    IFX                            shift and go to state 4
    WHILEX                         shift and go to state 5
    FORX                           shift and go to state 6
    RETURNX                        shift and go to state 7
    PRINTX                         shift and go to state 8
    BLOCK                          shift and go to state 9
    EMPTY                          shift and go to state 10

state 1

    (0) S' -> start .



state 2

    (1) start -> LINE .

    $end            reduce using rule 1 (start -> LINE .)


state 3

    (2) LINE -> IDX . ; LINE

    ;               shift and go to state 18


state 4

    (3) LINE -> IFX . LINE
    (2) LINE -> . IDX ; LINE
    (3) LINE -> . IFX LINE
    (4) LINE -> . WHILEX LINE
    (5) LINE -> . FORX LINE
    (6) LINE -> . RETURNX ; LINE
    (7) LINE -> . PRINTX ; LINE
    (8) LINE -> . BLOCK LINE
    (9) LINE -> . EMPTY
    (18) IDX -> . ID = EXPRESSION
    (19) IDX -> . ID = MATRIX
    (20) IDX -> . ID = TABLE
    (21) IDX -> . ID [ EXPRESSION ] = EXPRESSION
    (22) IDX -> . ID [ EXPRESSION , EXPRESSION ] = EXPRESSION
    (23) IDX -> . ID ADDASSIGN EXPRESSION
    (24) IDX -> . ID SUBASSIGN EXPRESSION
    (25) IDX -> . ID MULASSIGN EXPRESSION
    (26) IDX -> . ID DIVASSIGN EXPRESSION
    (45) IFX -> . IF ( CONDITION ) ONELINE
    (46) IFX -> . IF ( CONDITION ) BLOCK
    (47) IFX -> . IF ( CONDITION ) ONELINE ELSE ONELINE
    (48) IFX -> . IF ( CONDITION ) ONELINE ELSE BLOCK
    (49) IFX -> . IF ( CONDITION ) BLOCK ELSE ONELINE
    (50) IFX -> . IF ( CONDITION ) BLOCK ELSE BLOCK
    (76) WHILEX -> . WHILE ( CONDITION ) ONELOOPLINE
    (77) WHILEX -> . WHILE ( CONDITION ) LOOPBLOCK
    (78) FORX -> . FOR ID = EXPRESSION : EXPRESSION ONELOOPLINE
    (79) FORX -> . FOR ID = EXPRESSION : EXPRESSION LOOPBLOCK
    (91) RETURNX -> . RETURN EXPRESSION
    (86) PRINTX -> . PRINT PRINTMANY
    (16) BLOCK -> . { LINE }
    (17) EMPTY -> .

    ID              shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    RETURN          shift and go to state 15
    PRINT           shift and go to state 16
    {               shift and go to state 17
    $end            reduce using rule 17 (EMPTY -> .)
    }               reduce using rule 17 (EMPTY -> .)

    IFX                            shift and go to state 4
    LINE                           shift and go to state 19
    IDX                            shift and go to state 3
    WHILEX                         shift and go to state 5
    FORX                           shift and go to state 6
    RETURNX                        shift and go to state 7
    PRINTX                         shift and go to state 8
    BLOCK                          shift and go to state 9
    EMPTY                          shift and go to state 10

state 5

    (4) LINE -> WHILEX . LINE
    (2) LINE -> . IDX ; LINE
    (3) LINE -> . IFX LINE
    (4) LINE -> . WHILEX LINE
    (5) LINE -> . FORX LINE
    (6) LINE -> . RETURNX ; LINE
    (7) LINE -> . PRINTX ; LINE
    (8) LINE -> . BLOCK LINE
    (9) LINE -> . EMPTY
    (18) IDX -> . ID = EXPRESSION
    (19) IDX -> . ID = MATRIX
    (20) IDX -> . ID = TABLE
    (21) IDX -> . ID [ EXPRESSION ] = EXPRESSION
    (22) IDX -> . ID [ EXPRESSION , EXPRESSION ] = EXPRESSION
    (23) IDX -> . ID ADDASSIGN EXPRESSION
    (24) IDX -> . ID SUBASSIGN EXPRESSION
    (25) IDX -> . ID MULASSIGN EXPRESSION
    (26) IDX -> . ID DIVASSIGN EXPRESSION
    (45) IFX -> . IF ( CONDITION ) ONELINE
    (46) IFX -> . IF ( CONDITION ) BLOCK
    (47) IFX -> . IF ( CONDITION ) ONELINE ELSE ONELINE
    (48) IFX -> . IF ( CONDITION ) ONELINE ELSE BLOCK
    (49) IFX -> . IF ( CONDITION ) BLOCK ELSE ONELINE
    (50) IFX -> . IF ( CONDITION ) BLOCK ELSE BLOCK
    (76) WHILEX -> . WHILE ( CONDITION ) ONELOOPLINE
    (77) WHILEX -> . WHILE ( CONDITION ) LOOPBLOCK
    (78) FORX -> . FOR ID = EXPRESSION : EXPRESSION ONELOOPLINE
    (79) FORX -> . FOR ID = EXPRESSION : EXPRESSION LOOPBLOCK
    (91) RETURNX -> . RETURN EXPRESSION
    (86) PRINTX -> . PRINT PRINTMANY
    (16) BLOCK -> . { LINE }
    (17) EMPTY -> .

    ID              shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    RETURN          shift and go to state 15
    PRINT           shift and go to state 16
    {               shift and go to state 17
    $end            reduce using rule 17 (EMPTY -> .)
    }               reduce using rule 17 (EMPTY -> .)

    WHILEX                         shift and go to state 5
    LINE                           shift and go to state 20
    IDX                            shift and go to state 3
    IFX                            shift and go to state 4
    FORX                           shift and go to state 6
    RETURNX                        shift and go to state 7
    PRINTX                         shift and go to state 8
    BLOCK                          shift and go to state 9
    EMPTY                          shift and go to state 10

state 6

    (5) LINE -> FORX . LINE
    (2) LINE -> . IDX ; LINE
    (3) LINE -> . IFX LINE
    (4) LINE -> . WHILEX LINE
    (5) LINE -> . FORX LINE
    (6) LINE -> . RETURNX ; LINE
    (7) LINE -> . PRINTX ; LINE
    (8) LINE -> . BLOCK LINE
    (9) LINE -> . EMPTY
    (18) IDX -> . ID = EXPRESSION
    (19) IDX -> . ID = MATRIX
    (20) IDX -> . ID = TABLE
    (21) IDX -> . ID [ EXPRESSION ] = EXPRESSION
    (22) IDX -> . ID [ EXPRESSION , EXPRESSION ] = EXPRESSION
    (23) IDX -> . ID ADDASSIGN EXPRESSION
    (24) IDX -> . ID SUBASSIGN EXPRESSION
    (25) IDX -> . ID MULASSIGN EXPRESSION
    (26) IDX -> . ID DIVASSIGN EXPRESSION
    (45) IFX -> . IF ( CONDITION ) ONELINE
    (46) IFX -> . IF ( CONDITION ) BLOCK
    (47) IFX -> . IF ( CONDITION ) ONELINE ELSE ONELINE
    (48) IFX -> . IF ( CONDITION ) ONELINE ELSE BLOCK
    (49) IFX -> . IF ( CONDITION ) BLOCK ELSE ONELINE
    (50) IFX -> . IF ( CONDITION ) BLOCK ELSE BLOCK
    (76) WHILEX -> . WHILE ( CONDITION ) ONELOOPLINE
    (77) WHILEX -> . WHILE ( CONDITION ) LOOPBLOCK
    (78) FORX -> . FOR ID = EXPRESSION : EXPRESSION ONELOOPLINE
    (79) FORX -> . FOR ID = EXPRESSION : EXPRESSION LOOPBLOCK
    (91) RETURNX -> . RETURN EXPRESSION
    (86) PRINTX -> . PRINT PRINTMANY
    (16) BLOCK -> . { LINE }
    (17) EMPTY -> .

    ID              shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    RETURN          shift and go to state 15
    PRINT           shift and go to state 16
    {               shift and go to state 17
    $end            reduce using rule 17 (EMPTY -> .)
    }               reduce using rule 17 (EMPTY -> .)

    FORX                           shift and go to state 6
    LINE                           shift and go to state 21
    IDX                            shift and go to state 3
    IFX                            shift and go to state 4
    WHILEX                         shift and go to state 5
    RETURNX                        shift and go to state 7
    PRINTX                         shift and go to state 8
    BLOCK                          shift and go to state 9
    EMPTY                          shift and go to state 10

state 7

    (6) LINE -> RETURNX . ; LINE

    ;               shift and go to state 22


state 8

    (7) LINE -> PRINTX . ; LINE

    ;               shift and go to state 23


state 9

    (8) LINE -> BLOCK . LINE
    (2) LINE -> . IDX ; LINE
    (3) LINE -> . IFX LINE
    (4) LINE -> . WHILEX LINE
    (5) LINE -> . FORX LINE
    (6) LINE -> . RETURNX ; LINE
    (7) LINE -> . PRINTX ; LINE
    (8) LINE -> . BLOCK LINE
    (9) LINE -> . EMPTY
    (18) IDX -> . ID = EXPRESSION
    (19) IDX -> . ID = MATRIX
    (20) IDX -> . ID = TABLE
    (21) IDX -> . ID [ EXPRESSION ] = EXPRESSION
    (22) IDX -> . ID [ EXPRESSION , EXPRESSION ] = EXPRESSION
    (23) IDX -> . ID ADDASSIGN EXPRESSION
    (24) IDX -> . ID SUBASSIGN EXPRESSION
    (25) IDX -> . ID MULASSIGN EXPRESSION
    (26) IDX -> . ID DIVASSIGN EXPRESSION
    (45) IFX -> . IF ( CONDITION ) ONELINE
    (46) IFX -> . IF ( CONDITION ) BLOCK
    (47) IFX -> . IF ( CONDITION ) ONELINE ELSE ONELINE
    (48) IFX -> . IF ( CONDITION ) ONELINE ELSE BLOCK
    (49) IFX -> . IF ( CONDITION ) BLOCK ELSE ONELINE
    (50) IFX -> . IF ( CONDITION ) BLOCK ELSE BLOCK
    (76) WHILEX -> . WHILE ( CONDITION ) ONELOOPLINE
    (77) WHILEX -> . WHILE ( CONDITION ) LOOPBLOCK
    (78) FORX -> . FOR ID = EXPRESSION : EXPRESSION ONELOOPLINE
    (79) FORX -> . FOR ID = EXPRESSION : EXPRESSION LOOPBLOCK
    (91) RETURNX -> . RETURN EXPRESSION
    (86) PRINTX -> . PRINT PRINTMANY
    (16) BLOCK -> . { LINE }
    (17) EMPTY -> .

    ID              shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    RETURN          shift and go to state 15
    PRINT           shift and go to state 16
    {               shift and go to state 17
    $end            reduce using rule 17 (EMPTY -> .)
    }               reduce using rule 17 (EMPTY -> .)

    BLOCK                          shift and go to state 9
    LINE                           shift and go to state 24
    IDX                            shift and go to state 3
    IFX                            shift and go to state 4
    WHILEX                         shift and go to state 5
    FORX                           shift and go to state 6
    RETURNX                        shift and go to state 7
    PRINTX                         shift and go to state 8
    EMPTY                          shift and go to state 10

state 10

    (9) LINE -> EMPTY .

    $end            reduce using rule 9 (LINE -> EMPTY .)
    }               reduce using rule 9 (LINE -> EMPTY .)


state 11

    (18) IDX -> ID . = EXPRESSION
    (19) IDX -> ID . = MATRIX
    (20) IDX -> ID . = TABLE
    (21) IDX -> ID . [ EXPRESSION ] = EXPRESSION
    (22) IDX -> ID . [ EXPRESSION , EXPRESSION ] = EXPRESSION
    (23) IDX -> ID . ADDASSIGN EXPRESSION
    (24) IDX -> ID . SUBASSIGN EXPRESSION
    (25) IDX -> ID . MULASSIGN EXPRESSION
    (26) IDX -> ID . DIVASSIGN EXPRESSION

    =               shift and go to state 25
    [               shift and go to state 26
    ADDASSIGN       shift and go to state 27
    SUBASSIGN       shift and go to state 28
    MULASSIGN       shift and go to state 29
    DIVASSIGN       shift and go to state 30


state 12

    (45) IFX -> IF . ( CONDITION ) ONELINE
    (46) IFX -> IF . ( CONDITION ) BLOCK
    (47) IFX -> IF . ( CONDITION ) ONELINE ELSE ONELINE
    (48) IFX -> IF . ( CONDITION ) ONELINE ELSE BLOCK
    (49) IFX -> IF . ( CONDITION ) BLOCK ELSE ONELINE
    (50) IFX -> IF . ( CONDITION ) BLOCK ELSE BLOCK

    (               shift and go to state 31


state 13

    (76) WHILEX -> WHILE . ( CONDITION ) ONELOOPLINE
    (77) WHILEX -> WHILE . ( CONDITION ) LOOPBLOCK

    (               shift and go to state 32


state 14

    (78) FORX -> FOR . ID = EXPRESSION : EXPRESSION ONELOOPLINE
    (79) FORX -> FOR . ID = EXPRESSION : EXPRESSION LOOPBLOCK

    ID              shift and go to state 33


state 15

    (91) RETURNX -> RETURN . EXPRESSION
    (92) EXPRESSION -> . NUMBER
    (93) EXPRESSION -> . FLOATNUMBER
    (94) EXPRESSION -> . ID
    (95) EXPRESSION -> . EXPRESSION + EXPRESSION
    (96) EXPRESSION -> . EXPRESSION - EXPRESSION
    (97) EXPRESSION -> . EXPRESSION * EXPRESSION
    (98) EXPRESSION -> . EXPRESSION / EXPRESSION
    (99) EXPRESSION -> . ( EXPRESSION )
    (100) EXPRESSION -> . - EXPRESSION

    NUMBER          shift and go to state 35
    FLOATNUMBER     shift and go to state 36
    ID              shift and go to state 37
    (               shift and go to state 39
    -               shift and go to state 38

    EXPRESSION                     shift and go to state 34

state 16

    (86) PRINTX -> PRINT . PRINTMANY
    (87) PRINTMANY -> . STRING
    (88) PRINTMANY -> . EXPRESSION
    (89) PRINTMANY -> . STRING , PRINTMANY
    (90) PRINTMANY -> . EXPRESSION , PRINTMANY
    (92) EXPRESSION -> . NUMBER
    (93) EXPRESSION -> . FLOATNUMBER
    (94) EXPRESSION -> . ID
    (95) EXPRESSION -> . EXPRESSION + EXPRESSION
    (96) EXPRESSION -> . EXPRESSION - EXPRESSION
    (97) EXPRESSION -> . EXPRESSION * EXPRESSION
    (98) EXPRESSION -> . EXPRESSION / EXPRESSION
    (99) EXPRESSION -> . ( EXPRESSION )
    (100) EXPRESSION -> . - EXPRESSION

    STRING          shift and go to state 41
    NUMBER          shift and go to state 35
    FLOATNUMBER     shift and go to state 36
    ID              shift and go to state 37
    (               shift and go to state 39
    -               shift and go to state 38

    PRINTMANY                      shift and go to state 40
    EXPRESSION                     shift and go to state 42

state 17

    (16) BLOCK -> { . LINE }
    (2) LINE -> . IDX ; LINE
    (3) LINE -> . IFX LINE
    (4) LINE -> . WHILEX LINE
    (5) LINE -> . FORX LINE
    (6) LINE -> . RETURNX ; LINE
    (7) LINE -> . PRINTX ; LINE
    (8) LINE -> . BLOCK LINE
    (9) LINE -> . EMPTY
    (18) IDX -> . ID = EXPRESSION
    (19) IDX -> . ID = MATRIX
    (20) IDX -> . ID = TABLE
    (21) IDX -> . ID [ EXPRESSION ] = EXPRESSION
    (22) IDX -> . ID [ EXPRESSION , EXPRESSION ] = EXPRESSION
    (23) IDX -> . ID ADDASSIGN EXPRESSION
    (24) IDX -> . ID SUBASSIGN EXPRESSION
    (25) IDX -> . ID MULASSIGN EXPRESSION
    (26) IDX -> . ID DIVASSIGN EXPRESSION
    (45) IFX -> . IF ( CONDITION ) ONELINE
    (46) IFX -> . IF ( CONDITION ) BLOCK
    (47) IFX -> . IF ( CONDITION ) ONELINE ELSE ONELINE
    (48) IFX -> . IF ( CONDITION ) ONELINE ELSE BLOCK
    (49) IFX -> . IF ( CONDITION ) BLOCK ELSE ONELINE
    (50) IFX -> . IF ( CONDITION ) BLOCK ELSE BLOCK
    (76) WHILEX -> . WHILE ( CONDITION ) ONELOOPLINE
    (77) WHILEX -> . WHILE ( CONDITION ) LOOPBLOCK
    (78) FORX -> . FOR ID = EXPRESSION : EXPRESSION ONELOOPLINE
    (79) FORX -> . FOR ID = EXPRESSION : EXPRESSION LOOPBLOCK
    (91) RETURNX -> . RETURN EXPRESSION
    (86) PRINTX -> . PRINT PRINTMANY
    (16) BLOCK -> . { LINE }
    (17) EMPTY -> .

    ID              shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    RETURN          shift and go to state 15
    PRINT           shift and go to state 16
    {               shift and go to state 17
    }               reduce using rule 17 (EMPTY -> .)

    LINE                           shift and go to state 43
    IDX                            shift and go to state 3
    IFX                            shift and go to state 4
    WHILEX                         shift and go to state 5
    FORX                           shift and go to state 6
    RETURNX                        shift and go to state 7
    PRINTX                         shift and go to state 8
    BLOCK                          shift and go to state 9
    EMPTY                          shift and go to state 10

state 18

    (2) LINE -> IDX ; . LINE
    (2) LINE -> . IDX ; LINE
    (3) LINE -> . IFX LINE
    (4) LINE -> . WHILEX LINE
    (5) LINE -> . FORX LINE
    (6) LINE -> . RETURNX ; LINE
    (7) LINE -> . PRINTX ; LINE
    (8) LINE -> . BLOCK LINE
    (9) LINE -> . EMPTY
    (18) IDX -> . ID = EXPRESSION
    (19) IDX -> . ID = MATRIX
    (20) IDX -> . ID = TABLE
    (21) IDX -> . ID [ EXPRESSION ] = EXPRESSION
    (22) IDX -> . ID [ EXPRESSION , EXPRESSION ] = EXPRESSION
    (23) IDX -> . ID ADDASSIGN EXPRESSION
    (24) IDX -> . ID SUBASSIGN EXPRESSION
    (25) IDX -> . ID MULASSIGN EXPRESSION
    (26) IDX -> . ID DIVASSIGN EXPRESSION
    (45) IFX -> . IF ( CONDITION ) ONELINE
    (46) IFX -> . IF ( CONDITION ) BLOCK
    (47) IFX -> . IF ( CONDITION ) ONELINE ELSE ONELINE
    (48) IFX -> . IF ( CONDITION ) ONELINE ELSE BLOCK
    (49) IFX -> . IF ( CONDITION ) BLOCK ELSE ONELINE
    (50) IFX -> . IF ( CONDITION ) BLOCK ELSE BLOCK
    (76) WHILEX -> . WHILE ( CONDITION ) ONELOOPLINE
    (77) WHILEX -> . WHILE ( CONDITION ) LOOPBLOCK
    (78) FORX -> . FOR ID = EXPRESSION : EXPRESSION ONELOOPLINE
    (79) FORX -> . FOR ID = EXPRESSION : EXPRESSION LOOPBLOCK
    (91) RETURNX -> . RETURN EXPRESSION
    (86) PRINTX -> . PRINT PRINTMANY
    (16) BLOCK -> . { LINE }
    (17) EMPTY -> .

    ID              shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    RETURN          shift and go to state 15
    PRINT           shift and go to state 16
    {               shift and go to state 17
    $end            reduce using rule 17 (EMPTY -> .)
    }               reduce using rule 17 (EMPTY -> .)

    IDX                            shift and go to state 3
    LINE                           shift and go to state 44
    IFX                            shift and go to state 4
    WHILEX                         shift and go to state 5
    FORX                           shift and go to state 6
    RETURNX                        shift and go to state 7
    PRINTX                         shift and go to state 8
    BLOCK                          shift and go to state 9
    EMPTY                          shift and go to state 10

state 19

    (3) LINE -> IFX LINE .

    $end            reduce using rule 3 (LINE -> IFX LINE .)
    }               reduce using rule 3 (LINE -> IFX LINE .)


state 20

    (4) LINE -> WHILEX LINE .

    $end            reduce using rule 4 (LINE -> WHILEX LINE .)
    }               reduce using rule 4 (LINE -> WHILEX LINE .)


state 21

    (5) LINE -> FORX LINE .

    $end            reduce using rule 5 (LINE -> FORX LINE .)
    }               reduce using rule 5 (LINE -> FORX LINE .)


state 22

    (6) LINE -> RETURNX ; . LINE
    (2) LINE -> . IDX ; LINE
    (3) LINE -> . IFX LINE
    (4) LINE -> . WHILEX LINE
    (5) LINE -> . FORX LINE
    (6) LINE -> . RETURNX ; LINE
    (7) LINE -> . PRINTX ; LINE
    (8) LINE -> . BLOCK LINE
    (9) LINE -> . EMPTY
    (18) IDX -> . ID = EXPRESSION
    (19) IDX -> . ID = MATRIX
    (20) IDX -> . ID = TABLE
    (21) IDX -> . ID [ EXPRESSION ] = EXPRESSION
    (22) IDX -> . ID [ EXPRESSION , EXPRESSION ] = EXPRESSION
    (23) IDX -> . ID ADDASSIGN EXPRESSION
    (24) IDX -> . ID SUBASSIGN EXPRESSION
    (25) IDX -> . ID MULASSIGN EXPRESSION
    (26) IDX -> . ID DIVASSIGN EXPRESSION
    (45) IFX -> . IF ( CONDITION ) ONELINE
    (46) IFX -> . IF ( CONDITION ) BLOCK
    (47) IFX -> . IF ( CONDITION ) ONELINE ELSE ONELINE
    (48) IFX -> . IF ( CONDITION ) ONELINE ELSE BLOCK
    (49) IFX -> . IF ( CONDITION ) BLOCK ELSE ONELINE
    (50) IFX -> . IF ( CONDITION ) BLOCK ELSE BLOCK
    (76) WHILEX -> . WHILE ( CONDITION ) ONELOOPLINE
    (77) WHILEX -> . WHILE ( CONDITION ) LOOPBLOCK
    (78) FORX -> . FOR ID = EXPRESSION : EXPRESSION ONELOOPLINE
    (79) FORX -> . FOR ID = EXPRESSION : EXPRESSION LOOPBLOCK
    (91) RETURNX -> . RETURN EXPRESSION
    (86) PRINTX -> . PRINT PRINTMANY
    (16) BLOCK -> . { LINE }
    (17) EMPTY -> .

    ID              shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    RETURN          shift and go to state 15
    PRINT           shift and go to state 16
    {               shift and go to state 17
    $end            reduce using rule 17 (EMPTY -> .)
    }               reduce using rule 17 (EMPTY -> .)
